--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,49 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
+.body {
+  background: radial-gradient(500px at 50% 50%, #fff 40%, lightblue 200%);
+  height: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  z-index: 0;
+}
+h1 {
+  border-radius: 200px;
+  background: radial-gradient(250px at 50% 200%, #e5fcfb 100%, lightblue 100%);
+  text-align: center;
+  font-family: "Oswald", Helvetica, sans-serif;
+  font-size: 50px;
+  letter-spacing: 3px;
+  word-spacing: -8px;
+  color: black;
+  text-shadow: -1px -1px 0 black, -2px -2px 0 grey, -3px -3px 0 grey,
+    -4px -4px 0 dimgrey;
 }
 
-.App-link {
-  color: #61dafb;
+.postbody {
+  background: radial-gradient(500px at 100% 100%, #e5fcfb 100%, lightblue 100%);
+
+  border-radius: 50px;
+  text-align: center;
+  font-family: "Oswald", Helvetica, sans-serif;
+  font-size: 20px;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  color: black;
+  z-index: 3;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.carousel {
+  background-image: url("./templatecloud.png");
+  background-size: 200vw;
+  width: 100%;
+  height: 40vw;
+  object-fit: cover;
+  border-radius: 200px;
+}
+
+.footer {
+  bottom: 0%;
+  width: 100%;
+  position: relative;
+  height: 20vw;
+  min-height: 10vw;
+  z-index: 1;
 }
